Added profile middlewares

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -48,7 +48,7 @@ maximum-scale=1.0, user-scalable=no" />
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link user" href="/profile" data-toggle="tooltip" data-placement="bottom"
+                        <a class="nav-link user" href="/profile/<%=currentUser._id  %> " data-toggle="tooltip" data-placement="bottom"
                             title="<%=currentUser.username  %>"> <%= currentUser.username %></a>
                     </li>
                     <li class="nav-item">
