--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -26,6 +26,7 @@
                     <div class="row col-12">
                         <h5 class="card-title "><%=post.author.username  %> </h5>
                         <small class="text-muted ml-auto"><%=post.created.toDateString() %> </small>
+                        <% if (currentUser && post.author.id.equals(currentUser._id)) {%>
                         <div class="dropdown">
                             <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
@@ -42,6 +43,7 @@
                             </div>
 
                         </div>
+                    <% } %> 
                     </div>
 
                     <p class="card-text"><%= post.description %></p>
@@ -90,7 +92,7 @@
                     </div>
                     <% let flag=0;
                     post.comments.forEach((comment)=>{
-                        if (currentUser && currentUser.username==comment.author.username){
+                        if (currentUser && comment.author.id.equals(currentUser._id)){
                             flag=1;
                             
                         }
