--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -53,10 +53,6 @@
             <div>
                 <%  posts.forEach((post)=>{  %>
                 <% if (post.author.username==user.username){ %>
-                <% let x=0; %>
-                <% post.comments.forEach((comment)=>{  %>
-                <% x++; %>
-                <% }) %>
                 <div class="card mb-2" style="border-radius: 10px;">
                     <div class="card-body text-left">
                         <div class="row col-12">
@@ -64,7 +60,7 @@
                             <small class="text-muted ml-auto"><%=post.created.toDateString() %> </small>
                             <% if (currentUser && post.author.id.equals(currentUser._id)) {%>
                             <div class="dropdown">
-                                <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                                <a class="no_outline" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false">
                                     <img src="/assets/ellipsis.png" height="20px">
                                 </a>
@@ -72,7 +68,7 @@
                                     <a href="/posts/<%=post._id  %>/edit" class="dropdown-item text-left">Edit</a>
                                     <form class="dropdown-item" action="/posts/<%= post._id  %>?_method=DELETE"
                                         method="POST">
-                                        <button type="submit" class="btn text-left">Delete</button>
+                                        <button type="submit" class="no_outline">Delete</button>
                                     </form>
 
 
@@ -86,13 +82,27 @@
 
                         <hr class="mb-1">
                         <div class="row col-12">
-                            <a href="#"><img src="/assets/like.png" height="20px" onclick="changeicon(this)"
-                                    id="like_icon<%=post._id%>"></a>Like
+                             <form action="/posts/<%=post._id%>/like?_method=PUT" method="POST">
+                                <% if (post.likes.find(o => o==currentUser._id)){ %>
+                                <button type="submit" class="no_outline" type="button">
+                                    <img src="/assets/like-1.png" height="20px"><span class="ml-1"><%=post.likes.length  %></span>
+                                </button>
+                                <% } else{ %>
+                                <button type="submit" class="no_outline" type="button">
+                                    <img src="/assets/like.png" height="20px"><span class="ml-1"><%=post.likes.length  %></span>
+                                </button>
+                                <% } %>
+                            </form>
                             <a class="ml-auto" data-toggle="collapse" href="#post<%=post._id  %>" role="button"
-                                aria-expanded="false" aria-controls="collapseExample"><%=x %> Comments</a>
+                                aria-expanded="false" aria-controls="collapseExample"><%=post.comments.length %> Comments</a>
                         </div>
                         <hr class="mt-1">
                         <div class="collapse" id="post<%=post._id  %>">
+                            <% if (post.comments.length==0){ %> 
+                                <div class="card-body comment_section">
+                                    <p class="card-text text-center text-dark">No comments yet :(</p>
+                                </div>
+                            <% } else { %>
                             <div class="card-body comment_section">
                                 <% post.comments.forEach((comment)=>{ %>
                                 <div class="row col-md-12">
@@ -103,7 +113,7 @@
                                     <p><%=comment.text  %> </p>
                                     <% if (comment.author.id.equals(currentUser._id)) {%>
                                     <div class="dropdown ml-auto">
-                                        <a class="btn" href="#" role="button" id="dropdownMenuLink"
+                                        <a class="no_outline" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <img src="/assets/ellipsis.png" height="20px">
                                         </a>
@@ -113,7 +123,7 @@
                                             <form class="dropdown-item"
                                                 action="/posts/<%=post._id%>/comments/<%=comment._id %>?_method=DELETE"
                                                 method="POST">
-                                                <button type="submit" class="btn text-left">Delete</button>
+                                                <button type="submit" class="no_outline">Delete</button>
                                             </form>
 
 
@@ -125,6 +135,7 @@
 
                                 <% }) %>
                             </div>
+                        <% } %> 
                         </div>
                         <% let flag=0;
                             post.comments.forEach((comment)=>{
@@ -142,7 +153,7 @@
                                 <div class="form-group">
                                     <input name="comment[text]" id="desc" class="comment_section"
                                         placeholder="Write a comment..." required>
-                                    <p class="small">Press Enter to post</p>
+                                    <p class="small ml-2">Press Enter to post</p>
                                 </div>
                             </form>
                         </div>
