--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,8 @@ maximum-scale=1.0, user-scalable=no" />
 </head>
 
 <body>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="9ikT9MfC"></script>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light mb-2">
         <div class="container">
             <a class="navbar-brand " href="/posts"><img height="50px" src="/assets/facebook.png"></a>
