Initialised friends system

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -138,3 +138,7 @@ a:hover {
 .no_outline:focus{
     outline: 0px;
 }
+.button_color{
+    border-color:#4267B2!important  ;
+    background-color:#4267B2!important ;
+}
