--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,7 +39,7 @@ maximum-scale=1.0, user-scalable=no" />
                             Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link icons" href="#" data-toggle="tooltip" data-placement="bottom"
+                        <a class="nav-link icons" href="/friends" data-toggle="tooltip" data-placement="bottom"
                             title="Find Friends">
                             Find Friends</a>
                     </li>
